[package]
name = "feedpulse"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "feedpulse"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"

[dev-dependencies]
tempfile = "3.13"
