[package]
name = "feedpulse"
version = "1.0.0"
edition = "2021"

[lib]
name = "feedpulse"
path = "src/lib.rs"

[[bin]]
name = "feedpulse"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
url = "2.5"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
